[FIX] web_responsive: Hide search panel on small screens

--- a/web_responsive/static/src/css/web_responsive.scss
+++ b/web_responsive/static/src/css/web_responsive.scss
@@ -747,3 +747,13 @@ html .o_web_client .o_action_manager .o_action {
         }
     }
 }
+
+// Search Panel
+@include media-breakpoint-down(sm) {
+    // Hide search panel
+    .o_controller_with_searchpanel {
+        .o_search_panel {
+            display: none;
+        }
+    }
+}
